--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           command: |
             rm -rf        ./var/cpuminer
             mkdir -pv     ./var/cpuminer
-            docker run -v ./var/cpuminer:/var/cpuminer:rw innovanon/fdo-cpuminer-onion
+            docker run -v ./var/cpuminer/:/var/cpuminer/:rw innovanon/fdo-cpuminer-onion
       - run:
           name: Build application Docker image
           command: |
